--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,15 +1,10 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
-@import 'variables';
-
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
 // Import tailwindcss with pastcss preprocessing
 @import '~tailwindcss/base';
 @import '~tailwindcss/components';
 @import '~tailwindcss/utilities';
-
+// Fonts, varaiables & Bootstrap
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import 'variables';
+@import '~bootstrap/scss/bootstrap';
+// Custom styles
 @import 'customstyles';
